syntax = "proto3";
 
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Tickets";

package tickets;

service Tickets {
  rpc AddTicket (AddTicketRequest) returns (AddTicketReply);
}

message AddTicketRequest {
  string user = 1;
  bool status = 2;
}

message AddTicketReply {
  string id = 1;
  string user = 2;
  google.protobuf.Timestamp creationDate = 3;
  google.protobuf.Timestamp updateDate = 4;
  bool status = 5;
}